#384 Refactor Extractor. Fix some Codacy issues